High-contrast fixes for search bars

--- a/_sass/layouts/_header.scss
+++ b/_sass/layouts/_header.scss
@@ -341,6 +341,11 @@ body.contrast-high {
         }
       }
     }
+    #search {
+      input, label {
+        color: $color-dark-highContrast;
+      }
+    }
   }
 
   @media screen and (max-width: 768px) {
